# libsynaptics

./: ChangeLog  Makefile.am  Makefile.in  README  Shm_0_14_4  Shm_0_14_5  Shm_0_14_6  Shm_0_15_0  Shm_0_15_1  Shm_0_15_2  Shm_0_99_1  Shm_0_99_2  Shm_0_99_3  Shm_1_0_0  Shm_1_1_0  Shm_1_1_1  Shm_1_1_2  Shm_1_1_3  TODO  aclocal.m4  configure  configure.ac  libsynaptics.kpf  ltmain.sh  pad.cpp  pad.h  padtest.cpp  synaptics.h  syndebug.h  synparam.h  synshm.h
